--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% flash.each do | name, msg | %>
+      <%= name.capitalize %>:: <%= msg %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
