--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -20,16 +20,15 @@
                     <%= article.description %>
                 </td>
                 <td>
-                    <a href="">Show</a>
+                    <%= link_to 'Show', article_path(article) %>
                 </td>
                 <td>
-                    <a href="">Edit</a>
+                    <%= link_to 'Edit', edit_article_path(article) %>
                 </td>
                 <td>
-                    <a href="">Delete</a>
+                    <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete } %>
                 </td>
             </tr>
         <% end %>
     </tbody>
 </table>
-
