--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -26,9 +26,12 @@
                     <%= link_to 'Edit', edit_article_path(article) %>
                 </td>
                 <td>
-                    <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete } %>
+                    <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete , turbo_confirm: 'Are you sure?' } %>
                 </td>
             </tr>
         <% end %>
     </tbody>
 </table>
+<p>
+    <%= link_to 'Create a new article', new_article_path %>
+</p>
