--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,7 @@
   </head>
 
   <body>
-    <% flash.each do | name, msg | %>
-      <%= name.capitalize %>:: <%= msg %>
-    <% end %>
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </body>
 </html>
