--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,25 +1,5 @@
 <h1>Create a new Article</h1>
 
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved:</h2>
-    <ul>
-        <%= @article.errors.full_messages.each do | msg | %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
-<% end %>
-<%= form_with scope: :article, url: articles_path, data: { turbo: false },
-              local: true do | form | %>
-    <p>
-        <%= form.label :title, "Title" %><br/>
-        <%= form.text_field :title %>
-    </p>
-    <p>
-        <%= form.label :description, "Description" %><br/>
-        <%= form.text_area :description %>
-    </p>
-    <p>
-        <%= form.submit "Create" %>
-    </p>
-<% end  %>
+<%= render 'form' %>
+
 <%= link_to 'Return to listing', articles_path %>
