--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,11 +1,4 @@
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved:</h2>
-    <ul>
-        <% @article.errors.full_messages.each do | msg | %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
-<% end %>
+<%= render partial: 'shared/form_errors', locals: { entity: @article } %>
 <%= form_with(model: @article, data: { turbo: false }, local: true) do | form
 | %>
     <p>
