udemy-rails-course-homework-assignment-one Add basic header and footer. Adjust for custom.css auto reloads.

--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -18772,3 +18772,15 @@ textarea.form-control-lg {
 .bi-wikipedia::before {
   content: "\f8cc";
 }
+
+main > .container {
+  padding: 60px 15px 0;
+}
+
+#homeTile {
+  background-image: url("/assets/images/jumbo-copy.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 425px;
+}
