--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>AlphaBlog</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-  </head>
-
-  <body>
-    <%= render 'layouts/messages' %>
-    <%= yield %>
-  </body>
+<html class="h-100" lang="en">
+    <head>
+        <title>AlphaBlog</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
+        <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+        <%= stylesheet_link_tag "custom", "data-turbo-track": "reload" %>
+        <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    </head>
+    <body class="d-flex flex-column h-100">
+        <%= render 'layouts/header' %>
+        <main class="flex-shrink-0">
+            <div class="container">
+                <%= render 'layouts/messages' %>
+                <%= yield %>
+            </div>
+        </main>
+        <%= render 'layouts/footer' %>
+    </body>
 </html>
