udemy-rails-course-homework-assignment-one convert article edit / update pages to a bootstrap friendly layout

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit a new Article</h1>
+<h1 class="text-center">Edit an Article</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel edit and return to listing', articles_path %>
+<%= link_to '[ Cancel edit and return to listing ]', articles_path, class: 'row justify-content-center text-decoration-none text-center text-info' %>
