--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,15 +1,23 @@
-<%= render partial: 'shared/form_errors', locals: { entity: @article } %>
-<%= form_with(model: @article, data: { turbo: false }, local: true) do | form
-| %>
-    <p>
-        <%= form.label :title, "Title" %><br/>
-        <%= form.text_field :title %>
-    </p>
-    <p>
-        <%= form.label :description, "Description" %><br/>
-        <%= form.text_area :description %>
-    </p>
-    <p>
-        <%= form.submit %>
-    </p>
-<% end  %>
+<div class="row justify-content-center">
+    <div class="col-8">
+        <%= render partial: 'shared/form_errors', locals: { entity: @article } %>
+
+        <%= form_with(model: @article, data: { turbo: false }, class: 'shaddow p-3 mb-3 bg-info rounded', local: true) do | form | %>
+            <div class="form-group row mb-3">
+                <%= form.label :title, "Title", class: 'col-2 col-form-label text-light' %>
+                <div class="col-10">
+                    <%= form.text_field :title, class: 'form-control shadow p-2 rounded', placeholder: 'Title of article' %>
+                </div>
+            </div>
+            <div class="form-group row mb-3">
+                <%= form.label :description, "Description", class: 'col-2 col-form-label text-light' %>
+                <div class="col-10">
+                    <%= form.text_area :description, rows: 10, class: 'form-control shadow p-2 rounded', placeholder: 'Description of article' %>
+                </div>
+            </div>
+            <div class="form-group text-center justify-content-center">
+                <%= form.submit :class => 'btn btn-outline-light btn-lg' %>
+            </div>
+        <% end  %>
+    </div>
+</div>
