--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Create a new Article</h1>
+<h1 class="text-center">Create a new Article</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Return to listing', articles_path %>
+<%= link_to '[ Return to listing ]', articles_path, class: 'row justify-content-center text-decoration-none text-center text-info' %>
