--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,13 +4,17 @@
 
         <%= form_with(model: @article, data: { turbo: false }, class: 'shaddow p-3 mb-3 bg-info rounded', local: true) do | form | %>
             <div class="form-group row mb-3">
-                <%= form.label :title, "Title", class: 'col-2 col-form-label text-light' %>
+                <div class="col-2 col-form-label text-light">
+                    <%= form.label :title, "Title" %>
+                </div>
                 <div class="col-10">
                     <%= form.text_field :title, class: 'form-control shadow p-2 rounded', placeholder: 'Title of article' %>
                 </div>
             </div>
             <div class="form-group row mb-3">
-                <%= form.label :description, "Description", class: 'col-2 col-form-label text-light' %>
+                <div class="col-2 col-form-label text-light">
+                    <%= form.label :description, "Description" %>
+                </div>
                 <div class="col-10">
                     <%= form.text_area :description, rows: 10, class: 'form-control shadow p-2 rounded', placeholder: 'Description of article' %>
                 </div>
