--- a/app/views/shared/_form_errors.html.erb
+++ b/app/views/shared/_form_errors.html.erb
@@ -1,8 +1,11 @@
 <% if entity.errors.any? %>
-    <h2>The following errors prevented the <%= entity.class.name %> from being saved:</h2>
-    <ul>
-        <% entity.errors.full_messages.each do | msg | %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>The following errors prevented the <%= entity.class.name %> from being saved:</strong>
+        <ul>
+            <% entity.errors.full_messages.each do | msg | %>
+                <li><%= msg %></li>
+            <% end %>
+        </ul>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 <% end %>
