--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,5 @@
 <h1>Articles Profile</h1>
 
-<p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong><%=@article.description %></p>
-<p>
-    <%= link_to 'Edit', edit_article_path(@article) %> |
-    <%= link_to 'Delete', article_path(@article), data: { turbo_method: :delete , turbo_confirm: 'Are you sure?' } %> |
-    <%= link_to 'Return to listing', articles_path %>
-</p>
+<%= render partial: 'articles/article_card', locals: { article: @article } %>
+
+<%= link_to '[ Return to listing ]', articles_path, class: 'row justify-content-center text-decoration-none text-center text-info' %>
