udemy-rails-course-homework-assignment-one Style updates to show page.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Articles Profile</h1>
+<h2 class="text-center mt-4"><%= @article.title %></h2>
 
 <%= render partial: 'articles/article_card', locals: { article: @article } %>
 
