--- a/app/views/articles/_article_card.html.erb
+++ b/app/views/articles/_article_card.html.erb
@@ -5,10 +5,12 @@
                 by Brian Hoenle
             </div>
             <div class="card-body">
-                <h5 class="card-title text-success"><%= link_to article.title, article_path(article), class: 'text-decoration-none text-success' %></h5>
-                <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                 <% if is_page('articles') %>
+                    <h5 class="card-title text-success"><%= link_to article.title, article_path(article), class: 'text-decoration-none text-success' %></h5>
+                    <p class="card-text"><%= truncate(article.description, length: 100) %></p>
                     <%= link_to 'Show', article_path(article), class: "btn btn-outline-success" %>
+                <% else %>
+                    <div class="card-text text-start"><%= simple_format(article.description) %></div>
                 <% end %>
                 <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-primary" %>
                 <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete , turbo_confirm: 'Are you sure?' }, class: "btn btn-outline-danger" %>
