udemy-rails-course-homework-assignment-one Center footer text

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 bg-dark">
-    <div class="container">
+    <div class="container text-center">
         <span class="text-white">Copyright &copy; <%= link_to "Brian Hoenle", "https://google.com", class: "text-white" %></span>
     </div>
 </footer>
