udemy-rails-course-homework-assignment-one remove unneeded container class in home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="mt-5">
     <div class="p-5 mb-4 bg-light rounded-3 text-white" id="homeTile">
         <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Alpha Blog</h1>
