--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,13 +4,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <%= link_to "AlphaBlog", root_path, class: "navbar-brand" %>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
                     <%= link_to "Home", root_path, class: "nav-link #{ get_active_page_class('home') }" %>
                 </li>
-                <li class="nav-item">
-                    <%= link_to "Articles", articles_path, class: "nav-link #{ get_active_page_class('articles') }" %>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Articles
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><%= link_to "New Article", new_article_path, class: "dropdown-item" %></li>
+                        <li><%= link_to "All Articles", articles_path, class: "dropdown-item" %></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <%= link_to "About", about_path, class: "nav-link #{ get_active_page_class('about') }" %>
